force-app/main/default/objects/Discount_Line_Item__c/Discount_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Discount Line Item</label>
    <nameField>
        <label>Discount Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>