force-app/main/default/objects/Discount_Line_Item__c/fields/Advanced_Order__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Order__c</fullName>
    <label>Advanced Order</label>
    <referenceTo>cgcloud__Order__c</referenceTo>
    <relationshipLabel>Discount Line Items</relationshipLabel>
    <relationshipName>Discount_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>