force-app/main/default/objects/Discount_Line_Item__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BG Discount</fullName>
                <default>true</default>
                <label>BG Discount</label>
            </value>
            <value>
                <fullName>Area Manager Discount</fullName>
            </value>
            <value>
                <fullName>Regional Manager Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>